--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.8",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "^6.1.6",
     "@react-navigation/material-bottom-tabs": "^6.0.7",
