--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "undefined": "@expo/vector-icons/AntDesign"
+    "undefined": "@expo/vector-icons/AntDesign",
+    "expo-font": "~9.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
