--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-async-storage/async-storage": "^1.15.8",
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "^2.1.0",
     "@react-navigation/drawer": "^6.1.6",
     "@react-navigation/elements": "^1.1.2",
     "@react-navigation/material-bottom-tabs": "^6.0.7",
