--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.22.0",
     "expo": "~42.0.1",
     "expo-font": "~9.2.1",
+    "expo-image-picker": "^10.2.3",
     "expo-speech": "^9.2.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
